--- a/DreadBot/DreadBot.csproj
+++ b/DreadBot/DreadBot.csproj
@@ -25,7 +25,7 @@
     <TargetFrameworkProfile />
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
-    <Install>false</Install>
+    <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
     <UpdateMode>Foreground</UpdateMode>
@@ -37,6 +37,7 @@
     <ApplicationRevision>74682</ApplicationRevision>
     <ApplicationVersion>4.1.764.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
+    <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -64,6 +65,27 @@
     <LangVersion>8.0</LangVersion>
     <CodeAnalysisRuleSet />
   </PropertyGroup>
+  <PropertyGroup>
+    <ManifestCertificateThumbprint>590BCDA7D5E64447B8DB8CED4623BE79EAE33EB7</ManifestCertificateThumbprint>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ManifestKeyFile>DreadBot_TemporaryKey.pfx</ManifestKeyFile>
+  </PropertyGroup>
+  <PropertyGroup>
+    <GenerateManifests>false</GenerateManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignManifests>true</SignManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>DreadBot.MainClass</StartupObject>
+  </PropertyGroup>
+  <PropertyGroup>
+    <TargetZone>LocalIntranet</TargetZone>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
@@ -83,6 +105,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\BaseContracts.cs" />
+    <Compile Include="Contracts\Games.cs" />
+    <Compile Include="Contracts\InlineMode.cs" />
+    <Compile Include="Contracts\Passport.cs" />
+    <Compile Include="Contracts\Payments.cs" />
+    <Compile Include="Contracts\RequestContracts\Requests.cs" />
+    <Compile Include="Contracts\SpecialContracts.cs" />
+    <Compile Include="Contracts\Stickers.cs" />
+    <Compile Include="Contracts\Updates.cs" />
     <Compile Include="Menus.cs" />
     <Compile Include="Events.cs" />
     <Compile Include="LiteDB\Database\Collections\Aggregate.cs" />
@@ -260,17 +291,28 @@
     <Compile Include="Configs.cs" />
     <Compile Include="Cron.cs" />
     <Compile Include="Database.cs" />
-    <Compile Include="JsonContracts.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="MainClass.cs" />
-    <Compile Include="Methods.cs" />
+    <Compile Include="Methods\BaseMethods.cs" />
+    <Compile Include="Methods\Enums.cs" />
+    <Compile Include="Methods\Games.cs" />
+    <Compile Include="Methods\GettingUpdates.cs" />
+    <Compile Include="Methods\InlineMode.cs" />
+    <Compile Include="Methods\Passport.cs" />
+    <Compile Include="Methods\Payments.cs" />
+    <Compile Include="Methods\SpecialMethods.cs" />
+    <Compile Include="Methods\Stickers.cs" />
+    <Compile Include="Methods\UpdatingMessages.cs" />
     <Compile Include="PluginManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SoundSystem.cs" />
     <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="DreadBot_TemporaryKey.pfx" />
     <None Include="packages.config" />
+    <None Include="Properties\app.manifest" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
@@ -293,6 +335,7 @@
     <Analyzer Include="..\packages\Microsoft.NetFramework.Analyzers.2.9.4\analyzers\dotnet\cs\Microsoft.NetFramework.Analyzers.dll" />
     <Analyzer Include="..\packages\Microsoft.NetFramework.Analyzers.2.9.4\analyzers\dotnet\cs\Microsoft.NetFramework.CSharp.Analyzers.dll" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
