--- a/source/packages.config
+++ b/source/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.7" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.Build.Tasks.Git" version="1.0.0-beta2-18618-05" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.4" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.4" targetFramework="net452" developmentDependency="true" />
@@ -8,9 +13,13 @@
   <package id="Microsoft.NetCore.Analyzers" version="2.9.4" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.NetFramework.Analyzers" version="2.9.4" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.Owin" version="4.1.0" targetFramework="net48" />
+  <package id="Microsoft.Owin.Hosting" version="4.1.0" targetFramework="net48" />
   <package id="Microsoft.SourceLink.Common" version="1.0.0-beta2-18618-05" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.SourceLink.GitHub" version="1.0.0-beta2-18618-05" targetFramework="net452" developmentDependency="true" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net48" />
+  <package id="Owin" version="1.0" targetFramework="net48" />
   <package id="System.Collections" version="4.3.0" targetFramework="net452" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net452" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net452" />
