--- a/FrameworkFiles/packages.config
+++ b/FrameworkFiles/packages.config
@@ -1,45 +1,45 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Build.Tasks.Git" version="1.0.0-beta2-18618-05" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.Build.Tasks.Git" version="1.0.0-beta2-18618-05" targetFramework="net452" developmentDependency="true" requireReinstallation="true" />
   <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.4" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.4" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.CodeQuality.Analyzers" version="2.9.4" targetFramework="net452" developmentDependency="true" />
-  <package id="Microsoft.Net.Compilers.Toolset" version="3.3.0-beta2-final" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.Net.Compilers.Toolset" version="3.3.0-beta2-final" targetFramework="net452" developmentDependency="true" requireReinstallation="true" />
   <package id="Microsoft.NetCore.Analyzers" version="2.9.4" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.NetFramework.Analyzers" version="2.9.4" targetFramework="net452" developmentDependency="true" />
-  <package id="Microsoft.SourceLink.Common" version="1.0.0-beta2-18618-05" targetFramework="net452" developmentDependency="true" />
-  <package id="Microsoft.SourceLink.GitHub" version="1.0.0-beta2-18618-05" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.SourceLink.Common" version="1.0.0-beta2-18618-05" targetFramework="net452" developmentDependency="true" requireReinstallation="true" />
+  <package id="Microsoft.SourceLink.GitHub" version="1.0.0-beta2-18618-05" targetFramework="net452" developmentDependency="true" requireReinstallation="true" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net452" />
   <package id="System.Collections" version="4.3.0" targetFramework="net452" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net452" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net452" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net452" />
-  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net452" />
+  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net452" requireReinstallation="true" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net452" />
-  <package id="System.IO" version="4.3.0" targetFramework="net452" />
-  <package id="System.IO.Compression" version="4.3.0" targetFramework="net452" />
-  <package id="System.Linq" version="4.3.0" targetFramework="net452" />
-  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net452" />
-  <package id="System.Net.Http" version="4.3.0" targetFramework="net452" />
+  <package id="System.IO" version="4.3.0" targetFramework="net452" requireReinstallation="true" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net452" requireReinstallation="true" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net452" requireReinstallation="true" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net452" requireReinstallation="true" />
+  <package id="System.Net.Http" version="4.3.0" targetFramework="net452" requireReinstallation="true" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net452" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net452" />
-  <package id="System.Reflection" version="4.3.0" targetFramework="net452" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net452" requireReinstallation="true" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net452" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net452" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net452" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net452" />
-  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net452" />
-  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net452" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net452" requireReinstallation="true" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net452" requireReinstallation="true" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net452" requireReinstallation="true" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net452" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net452" />
-  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net452" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net452" requireReinstallation="true" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net452" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net452" />
-  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net452" />
+  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net452" requireReinstallation="true" />
   <package id="System.Threading" version="4.3.0" targetFramework="net452" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net452" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net452" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net452" />
+  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net452" requireReinstallation="true" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net452" />
 </packages>
