Revert "fix Framework's nuget packages.config"
This reverts commit 296d9937cf0aa01a4d78d7e938993bde04fbb6f4.

--- a/source/DreadBot-Framework.csproj
+++ b/source/DreadBot-Framework.csproj
@@ -275,7 +275,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\FrameworkFiles\App.config" />
-	<None Include="packages.DreadBot-Framework.config" />
+	<None Include="..\FrameworkFiles\packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
