--- a/source/packages.config
+++ b/source/packages.config
@@ -14,6 +14,7 @@
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.NetFramework.Analyzers" version="2.9.4" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Owin" version="4.1.0" targetFramework="net48" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="4.1.0" targetFramework="net48" />
   <package id="Microsoft.Owin.Hosting" version="4.1.0" targetFramework="net48" />
   <package id="Microsoft.SourceLink.Common" version="1.0.0-beta2-18618-05" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.SourceLink.GitHub" version="1.0.0-beta2-18618-05" targetFramework="net452" developmentDependency="true" />
